# telegram-bookmark-bot

./: .env.example  README.md  pyproject.toml
src/: handlers.py  link_previews.py  main.py
tests/: test_link_previews.py
